--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
-name=stm32h7-DevEBox
+name=stm32h7-Arduino
 version=0.0.1
 author=Phil Schatzmann
 maintainer=Phil Schatzmann
-sentence=examples for stm32h7-DevEBox
-paragraph=examples for stm32h7-DevEBox
+sentence=examples for stm32h7 DevEBox and WeAct Boards
+paragraph=examples for stm32h7 DevEBox and WeAct Boards
 url=https://github.com/pschatzmann/stm32h7-DevEBox
 architectures=stm32
